@@ -1,5 +1,7 @@
 import React, { Component } from 'react';
 import { connect } from 'react-redux';
+import MobileDetect from 'mobile-detect';
+
 import ScenarioEditor from '../ScenarioEditor';
 import CampaignEditor from '../CampaignEditor';
 
@@ -18,15 +20,17 @@ class App extends Component {
 		const { width, height } = this.props;
 
 		return <div className="App">
-			{ !this.state.tool && <MainMenu
-				width={width}
-				height={height}
-				setTool={(tool) => {
-					this.setState({
-						tool,
-					});
-				}}
-			/> }
+			{ !this.state.tool && <MobileDetect>
+				<MainMenu
+					width={width}
+					height={height}
+					setTool={(tool) => {
+						this.setState({
+							tool,
+						});
+					}}
+				/>
+			</MobileDetect> }
 			{ this.state.tool === "scenario" && <ScenarioEditor 
 				width={width}
 				height={height}
