@@ -1,3 +1,28 @@
 .bottomOuter {
-	height: 100px;
+	min-width: 100px;
+}
+
+.itemImage {
+	width: 48px;
+	height: 48px;
+	margin-top: 10px;
+}
+
+.itemImage.selected {
+	outline: 1px solid red;
+}
+
+.itemImage:hover {
+	outline: 1px solid red;
+}
+
+.itemHolderOuter {
+	height: 100%;
+	overflow-y: auto;
+}
+
+.itemHolderInner {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
