@@ -1,18 +1,16 @@
 For v0.6.0
-* Handle conditions that can't repeat
 * Add ability to show message boxes and dialog w/ triggers
 * Add trigger to spawn characters
 * Trigger to move camera
 * Pause trigger
 * Replicate the first original campaign scenario
-* Character special skills
+* Character special skills for all base characters
 * Better menus for load and saving
 * Full dungeon tile set
 * Better asset names in editor
-* Properly handle character death in both maps and scenarios
+* Properly handle character death
 * Better enemy AI - basic pathfinding, real damage, action points
 * Basics for data validation
-* Improve editor usability
 
 For v0.7.0
 * All original base characters
