@@ -37,3 +37,4 @@ v0.5.0
 
 v0.6.0
 * Map follows active character
+* Improve editor usability
